--- a/style.css
+++ b/style.css
@@ -456,8 +456,10 @@ button{
     margin: 0 auto 6em auto;
     padding: 0.7em 3em;
     border: 1px solid black;
-    
-    
+}
+
+.grid a {
+    text-decoration:none;
 }
 
 button:hover{
