--- a/style.css
+++ b/style.css
@@ -22,12 +22,14 @@ font-family: 'Josefin Sans', sans-serif;
     font-size: 15px;
 }
 
-
+.body {
+    max-width: 1500px;
+}
 /* navbar starts */
 .navigation {
     position:absolute;
     width: 100%;
-    background-color: black;
+    /* background-color: black; */
     padding: 1.5em;
     
 }
@@ -44,9 +46,8 @@ font-family: 'Josefin Sans', sans-serif;
 nav {
     background-color: black;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     left:0;
-    top: 4.5em;
     position:absolute;
     transform: scale(1, 0);
     transform-origin: top;
@@ -185,6 +186,7 @@ ul {
 
     .logoHeader > img {
         width: 13rem;
+        margin-left: 4em;
     }
 }
 /* navbar ends */
@@ -207,16 +209,14 @@ h1 {
     color: var(--primary-light);
     font-size: 2.5rem;
     font-family: 'Josefin Sans', sans-serif;
+    font-weight: 400;
     text-transform: uppercase;
     text-align: left;
-    padding: 0.6em 0.5em;
-    margin: 1em;
+    padding: 0.6em 0.4em;
+    max-width: 291px;
     
 }
 
-span {
-    display: block;
-}
 
 @media (min-width: 800px) { 
     .bannar {
@@ -227,8 +227,8 @@ span {
     h1 {
         font-size: 4rem;
         padding: 0.6em 1em;
-        margin-right: 50%;
-        margin-top: 2em;
+        margin: 1em auto 0 2em;
+        max-width: 650px
     }
 
     span{
@@ -240,19 +240,20 @@ span {
 
 
 /* section1 starts */
-.virtualImgDesktop {
-    display:none;
-}
+
 
 .virtualImg {
     width: 100%;
     height: 100%;
     display: flex;
     justify-content: center;
+    margin: 25% auto 0 auto;
+    width:88%;
+    max-width: 800px;
 
 }
 
-.virtualImg > img {
+.virtualImg img {
     
     width: 88%;
     margin-top: 25%;
@@ -283,7 +284,7 @@ p {
 @media (min-width: 800px) { 
     .section1 {
         display:flex;
-        margin: 10% 10%;
+        margin: 8.5em 7em;
         position:relative;
     }
 
@@ -292,12 +293,11 @@ p {
     }
 
     .virtualImg {
-        display: none;
-    }
-    
-    .virtualImgDesktop{
-        display:block;
+        width: 500px;
+        height: 100%;
+        width: 65%;
         
+        margin: 0;
     }
     
     .virtualText {
@@ -358,7 +358,7 @@ h3 {
     background-repeat: no-repeat;
     width: 100%;
     height: 15vh;
-    margin-bottom: 1em;
+    margin-bottom: 2em;
     display:flex;
     align-items: flex-end;
 }
@@ -369,7 +369,7 @@ h3 {
     background-repeat: no-repeat;
     width: 100%;
     height: 15vh;
-    margin-bottom: 1em;
+    margin-bottom: 2em;
     display:flex;
     align-items: flex-end;
 }
@@ -380,7 +380,7 @@ h3 {
     background-repeat: no-repeat;
     width: 100%;
     height: 15vh;
-    margin-bottom: 1em;
+    margin-bottom: 2em;
     display:flex;
     align-items: flex-end;
 }
@@ -391,7 +391,7 @@ h3 {
     background-repeat: no-repeat;
     width: 100%;
     height: 15vh;
-    margin-bottom: 1em;
+    margin-bottom: 2em;
     display:flex;
     align-items: flex-end;
 }
@@ -402,7 +402,7 @@ h3 {
     background-repeat: no-repeat;
     width: 100%;
     height: 15vh;
-    margin-bottom: 1em;
+    margin-bottom: 2em;
     display:flex;
     align-items: flex-end;
 }
@@ -413,7 +413,7 @@ h3 {
     background-repeat: no-repeat;
     width: 100%;
     height: 15vh;
-    margin-bottom: 1em;
+    margin-bottom: 2em;
     display:flex;
     align-items: flex-end;
 
@@ -426,7 +426,7 @@ h3 {
     background-repeat: no-repeat;
     width: 100%;
     height: 15vh;
-    margin-bottom: 1em;
+    margin-bottom: 2em;
     display:flex;
     align-items: flex-end;
 }
@@ -437,7 +437,7 @@ h3 {
     background-repeat: no-repeat;
     width: 100%;
     height: 15vh;
-    margin-bottom: 1em;
+    margin-bottom: 2em;
     display:flex;
     align-items: flex-end;
 }
@@ -456,6 +456,8 @@ button{
     margin: 0 auto 6em auto;
     padding: 0.7em 3em;
     border: 1px solid black;
+    
+    
 }
 
 .grid a {
@@ -477,6 +479,7 @@ button:hover{
 
     .section2 {
         position:relative;
+        margin: 2em 1em 2em 1em;
     }
 
     .heading2 {
@@ -546,7 +549,8 @@ button:hover{
     button {
         position:absolute;
         top: 0;
-        right: 2%;
+        right: 3%;
+
     }
 }
 /* section2 ends */
@@ -586,67 +590,80 @@ footer {
     margin-bottom: 1em;
 }
 
+.socialLinks {
+    position: relative;
+}
+
+.socialLinks::after {
+    content: '';
+    display: none;
+    position: absolute;
+    width: 100%; 
+    left:0;
+    border-bottom: 2px solid white;
+}
+
+.socialLinks:hover:after {
+    display:block;
+}
+
 @media (min-width:800px) { 
 
-footer {
-    display: flex;
-    flex-wrap: wrap;
+    footer {
+        display: flex;
+        flex-wrap: wrap;
+        
+    }
+
+    footer ul{
+        display:flex;
+        justify-content: flex-start;
+        align-content: flex-start;
+        height: 1em;
+        height: auto;
+    }
+
+    .menuFooter > ul > li {
+        margin:1em 0.8em 0 0;
+    }
+
+
+    .logoFooter {
+        flex: 1 1 50%;
+        order:0;
+        text-align:start;
+        padding-left: 7em;
+    }
+
+    .socialBar {
+        flex: 1 1 50%;
+        order:1;
+        margin: 0;
+        justify-self: flex-end;
+        text-align: right;
+        padding-right: 4em;
+    }
+
+    .menuFooter{
+        flex: 1 1 50%;
+        order:2;
+        height: 1em;
+        padding-left: 7em;
+        padding-bottom: 2em;
+    }
+
+    .copyright {
+        flex: 1 1 50%;
+        order:3;
+        margin:0;
+        text-align:right;
+        align-self: center;
+        height: 1em;
+        padding-right: 4em;
+    }
 }
 
-footer ul{
-    display:flex;
-    justify-content: flex-start;
-    align-content: flex-start;
-    height: 1em;
-    height: auto;
-}
-
-.menuFooter > ul > li {
-    margin:1em 0.8em 0 0;
-}
-
-
-.logoFooter {
-    flex: 1 1 50%;
-    order:0;
-    text-align:start;
-    padding-left: 7%;
-}
-
-.socialBar {
-    flex: 1 1 50%;
-    order:1;
-    margin: 0;
-    justify-self: flex-end;
-    text-align: right;
-    padding-right: 8%;
-}
-
-.socialDiv > img:hover {
-    border-bottom: 2px solid white;
-    padding-bottom: 0.5em;
-}
-
-.menuFooter{
-    flex: 1 1 50%;
-    order:2;
-    height: 1em;
-    padding-left: 7%;
-    padding-bottom: 2em;
-}
-
-.copyright {
-    flex: 1 1 50%;
-    order:3;
-    margin:0;
-    text-align:right;
-    align-self: center;
-    height: 1em;
-    padding-right: 6%;
-}
-}
-
-/* footer */
+/* footer end  */
 
 .attribution { font-size: 11px; text-align: center; }
 .attribution a { color: hsl(228, 45%, 44%); }
